samples/_failures_safe/1761289061_1ba65e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bc62ff9.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_5bc62ff9.c:173:5: error: expected declaration or statement at end of input
  173 |     return 1;
      |     ^~~~~~
